--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
+    "formidable": "^3.5.1",
     "jsonwebtoken": "^9.0.2",
     "md5": "^2.3.0",
     "mongodb": "^6.8.0",
@@ -27,6 +28,7 @@
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/bcryptjs": "^2.4.6",
+    "@types/formidable": "^3.4.5",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/md5": "^2.3.5",
     "@types/node": "^20",
