--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "md5": "^2.3.0",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.1",
+    "multer": "^1.4.5-lts.1",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
+    "next-connect": "^1.0.0",
     "react": "^18",
     "react-dom": "^18",
     "socket.io": "^4.7.5",
@@ -31,6 +33,7 @@
     "@types/formidable": "^3.4.5",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/md5": "^2.3.5",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
